Removed unnecessary returns.